--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
 <ul>
   <li><a href="introduction.html">Introduction</a>
     <ul>
-      <li>Architecture, Performance, and Games <em>(not written yet)</em></li>
+      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
     </ul>
   </li>
   <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
@@ -76,7 +76,7 @@
       <li><a href="update-method.html">Update Method</a></li>
     </ul>
   </li>
-  <li>Behavioral Patterns
+  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
     <ul>
       <li><a href="bytecode.html">Bytecode</a></em></li>
       <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
