--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Decoupling Patterns</title>
+<title>Game Programming Patterns / Introduction / Architecture, Performance, and Games</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="type-object.html">Type Object</a> | <a href="type-object.html">Component</a> &rarr;
+      <h1 class="thread">&larr; <a href="introduction.html">Introduction</a> | <a href="introduction.html">Design Patterns Revisited</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
@@ -32,10 +32,8 @@
     <table>
       <tr>
         <td width="30%" class="section-nav">
-          <h2>Decoupling Patterns</h2>
-          <ul><li>
-<a href="#the-patterns">The Patterns</a></li></ul>
-
+          <h2>Architecture, Performance, and Games</h2>
+          
         </td>
         <td width="70%">
           <h2>Chapters</h2>
@@ -129,17 +127,9 @@
     </tr>
   </table>
 </div>
-<h1>Decoupling Patterns</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
-<p>Writing code to do what you want is actually pretty easy. What&#x2019;s hard is writing code that&#x2019;s easy to adapt when what you want <em>changes</em>. Rarely do we have the luxury of a perfect feature set before we&#x2019;ve fired up our editor.</p>
-<p>A powerful tool we have for making change easier is <em>decoupling</em>. When we say two pieces of code are "decoupled", we mean a change in one usually doesn&#x2019;t require a change in the other. When you change some feature in your game, the fewer places in code you have to touch, the easier it is.</p>
-<p>The <a href="component.html">Component pattern</a> decouples different domains in your game from each other within a single entity that has aspects of all of them. <a href="event-queue.html">Event Queues</a> decouple two objects communicating with each other, both statically and <em>in time</em>. The <a href="service-locator.html">Service Locator pattern</a> lets code access an "ambient" facility without being bound to the code that provides it.</p>
-<h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
-<ul>
-<li><a href="component.html">Component</a></li>
-<li><a href="event-queue.html">Event Queue</a></li>
-<li><a href="service-locator.html">Service Locator</a></li>
-</ul>
+<h1>Architecture, Performance, and Games</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="introduction.html">Introduction</a></span></h1>
+<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
 <p class="footer">&copy; 2009-2014 Bob Nystrom</p>
 </div>
 </div>
