--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Introduction / Architecture, Performance, and Games</title>
+<title>Game Programming Patterns / Behavioral Patterns</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -24,22 +24,25 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1><a href="index.html">Game Programming Patterns</a></h1>
+      <h1 class="thread">&larr; <a href="update-method.html">Update Method</a> | <a href="update-method.html">Bytecode</a> &rarr;
+      <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
   <div class="column">
     <table>
       <tr>
-        <td width="30%">
-          <h2>Architecture, Performance, and Games</h2>
-          
+        <td width="30%" class="section-nav">
+          <h2>Behavioral Patterns</h2>
+          <ul><li>
+<a href="#the-patterns">The Patterns</a></li></ul>
+
         </td>
         <td width="70%">
           <h2>Chapters</h2>
 <ul>
   <li><a href="introduction.html">Introduction</a>
     <ul>
-      <li>Architecture, Performance, and Games</li>
+      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
     </ul>
   </li>
   <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
@@ -59,10 +62,11 @@
         <a href="update-method.html">Update Method</a></li>
     </ul>
   </li>
-  <li>Behavioral Patterns
+  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
     <ul>
-      <li>Bytecode, <a href="subclass-sandbox.html">Subclass Sandbox</a>,
-        <a href="type-object.html">Type Object</a></li>
+      <li><a href="bytecode.html">Bytecode</a>,
+      <a href="subclass-sandbox.html">Subclass Sandbox</a>,
+      <a href="type-object.html">Type Object</a></li>
     </ul>
   </li>
   <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
@@ -86,7 +90,7 @@
     </table>
   </div>
 </div>
-<div class="page">
+<div class="page sidebar">
 <div class="content">
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -125,9 +129,15 @@
     </tr>
   </table>
 </div>
-<h1>Architecture, Performance, and Games</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="introduction.html">Introduction</a></h1>
-<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
+<h1>Behavioral Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
+<p><strong>TODO: Write me!</strong></p>
+<h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
+<ul>
+<li><a href="bytecode.html">Bytecode</a></li>
+<li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
+<li><a href="type-object.html">Type Object</a></li>
+</ul>
 <p class="footer">&copy; 2009-2014 Bob Nystrom</p>
 </div>
 </div>
