--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -24,13 +24,14 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1><a href="index.html">Game Programming Patterns</a></h1>
+      <h1 class="thread">&larr; <a href="bytecode.html">Bytecode</a> | <a href="bytecode.html">Type Object</a> &rarr;
+      <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
   <div class="column">
     <table>
       <tr>
-        <td width="30%">
+        <td width="30%" class="section-nav">
           <h2>Subclass Sandbox</h2>
           <ul><li>
 <a href="#intent">Intent</a></li><li>
@@ -48,7 +49,7 @@
 <ul>
   <li><a href="introduction.html">Introduction</a>
     <ul>
-      <li>Architecture, Performance, and Games</li>
+      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
     </ul>
   </li>
   <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
@@ -68,10 +69,11 @@
         <a href="update-method.html">Update Method</a></li>
     </ul>
   </li>
-  <li>Behavioral Patterns
+  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
     <ul>
-      <li>Bytecode, <a href="subclass-sandbox.html">Subclass Sandbox</a>,
-        <a href="type-object.html">Type Object</a></li>
+      <li><a href="bytecode.html">Bytecode</a>,
+      <a href="subclass-sandbox.html">Subclass Sandbox</a>,
+      <a href="type-object.html">Type Object</a></li>
     </ul>
   </li>
   <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
@@ -95,7 +97,7 @@
     </table>
   </div>
 </div>
-<div class="page">
+<div class="page sidebar">
 <div class="content">
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -135,7 +137,7 @@
   </table>
 </div>
 <h1>Subclass Sandbox</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="behavioral-patterns.html">Behavioral Patterns</a></h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Create varied behavior by defining subclasses that use operations provided by
 their shared base class.</em></p>
