Section intro for Behavioral Patterns.
Also fix thread links.

--- a/html/command.html
+++ b/html/command.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="design-patterns-revisited.html">Design Patterns Revisited</a> | <a href="design-patterns-revisited.html">Flyweight</a> &rarr;
+      <h1 class="thread">&larr; <a href="design-patterns-revisited.html">Design Patterns Revisited</a> | <a href="flyweight.html">Flyweight</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
