--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a> | <a href="architecture-performance-and-games.html">Command</a> &rarr;
+      <h1 class="thread">&larr; <a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a> | <a href="command.html">Command</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
