--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="component.html">Component</a> | <a href="component.html">Service Locator</a> &rarr;
+      <h1 class="thread">&larr; <a href="component.html">Component</a> | <a href="service-locator.html">Service Locator</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
