--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="command.html">Command</a> | <a href="command.html">Observer</a> &rarr;
+      <h1 class="thread">&larr; <a href="command.html">Command</a> | <a href="observer.html">Observer</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
