--- a/html/observer.html
+++ b/html/observer.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="flyweight.html">Flyweight</a> | <a href="flyweight.html">Prototype</a> &rarr;
+      <h1 class="thread">&larr; <a href="flyweight.html">Flyweight</a> | <a href="prototype.html">Prototype</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
