--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="event-queue.html">Event Queue</a> | <a href="event-queue.html">Optimization Patterns</a> &rarr;
+      <h1 class="thread">&larr; <a href="event-queue.html">Event Queue</a> | <a href="optimization-patterns.html">Optimization Patterns</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
