--- a/html/state.html
+++ b/html/state.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="singleton.html">Singleton</a> | <a href="singleton.html">Sequencing Patterns</a> &rarr;
+      <h1 class="thread">&larr; <a href="singleton.html">Singleton</a> | <a href="sequencing-patterns.html">Sequencing Patterns</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
