--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="bytecode.html">Bytecode</a> | <a href="bytecode.html">Type Object</a> &rarr;
+      <h1 class="thread">&larr; <a href="bytecode.html">Bytecode</a> | <a href="type-object.html">Type Object</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
