--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="introduction.html">Introduction</a> | <a href="introduction.html">Design Patterns Revisited</a> &rarr;
+      <h1 class="thread">&larr; <a href="introduction.html">Introduction</a> | <a href="design-patterns-revisited.html">Design Patterns Revisited</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
