--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="update-method.html">Update Method</a> | <a href="update-method.html">Bytecode</a> &rarr;
+      <h1 class="thread">&larr; <a href="update-method.html">Update Method</a> | <a href="bytecode.html">Bytecode</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
@@ -131,7 +131,9 @@
 </div>
 <h1>Behavioral Patterns</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
-<p><strong>TODO: Write me!</strong></p>
+<p>Once you&#x2019;ve built your game&#x2019;s stage and decorated it with actors and props, all that remains is to start the scene. For this, you need behavior&thinsp;&mdash;&thinsp;the script that tells each entity in your game what do to.</p>
+<p>Of course all code is "behavior", and all software is defining behavior, but what&#x2019;s different about games is often the <em>breadth</em> of it that you have to implement. While your word processor may have a long list of features, it pales next to the number of inhabitants, items, and quests in your average MMORPG.</p>
+<p>The patterns in this chapter help you define and refine a large quantity of behavior quickly, and maintainably. <a href="type-object.html">Type Objects</a> create categories of behavior without the rigidity of defining an actual class. A <a href="subclass-sandbox.html">Subclass Sandbox</a> gives you a safe set of primitives to define a variety of behavior in terms of. The most advanced option is <a href="bytecode.html">Bytecode</a>, which moves behavior out of code entirely and into data.</p>
 <h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
 <ul>
 <li><a href="bytecode.html">Bytecode</a></li>
