--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="behavioral-patterns.html">Behavioral Patterns</a> | <a href="behavioral-patterns.html">Subclass Sandbox</a> &rarr;
+      <h1 class="thread">&larr; <a href="behavioral-patterns.html">Behavioral Patterns</a> | <a href="subclass-sandbox.html">Subclass Sandbox</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
