--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="optimization-patterns.html">Optimization Patterns</a> | <a href="optimization-patterns.html">Dirty Flag</a> &rarr;
+      <h1 class="thread">&larr; <a href="optimization-patterns.html">Optimization Patterns</a> | <a href="dirty-flag.html">Dirty Flag</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
