--- a/html/decoupling-patterns.html
+++ b/html/decoupling-patterns.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="type-object.html">Type Object</a> | <a href="type-object.html">Component</a> &rarr;
+      <h1 class="thread">&larr; <a href="type-object.html">Type Object</a> | <a href="component.html">Component</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
@@ -133,7 +133,7 @@
 <h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
 <p>Writing code to do what you want is actually pretty easy. What&#x2019;s hard is writing code that&#x2019;s easy to adapt when what you want <em>changes</em>. Rarely do we have the luxury of a perfect feature set before we&#x2019;ve fired up our editor.</p>
 <p>A powerful tool we have for making change easier is <em>decoupling</em>. When we say two pieces of code are "decoupled", we mean a change in one usually doesn&#x2019;t require a change in the other. When you change some feature in your game, the fewer places in code you have to touch, the easier it is.</p>
-<p>The <a href="component.html">Component pattern</a> decouples different domains in your game from each other within a single entity that has aspects of all of them. <a href="event-queue.html">Event Queues</a> decouple two objects communicating with each other, both statically and <em>in time</em>. The <a href="service-locator.html">Service Locator pattern</a> lets code access an "ambient" facility without being bound to the code that provides it.</p>
+<p>The <a href="component.html">Component pattern</a> decouples different domains in your game from each other within a single entity that has aspects of all of them. <a href="event-queue.html">Event Queues</a> decouple two objects communicating with each other, both statically and <em>in time</em>. The <a href="service-locator.html">Service Locator pattern</a> lets code access a facility without being bound to the code that provides it.</p>
 <h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
 <ul>
 <li><a href="component.html">Component</a></li>
