--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="data-locality.html">Data Locality</a> | <a href="data-locality.html">Object Pool</a> &rarr;
+      <h1 class="thread">&larr; <a href="data-locality.html">Data Locality</a> | <a href="object-pool.html">Object Pool</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
