--- a/html/game-loop.html
+++ b/html/game-loop.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="double-buffer.html">Double Buffer</a> | <a href="double-buffer.html">Update Method</a> &rarr;
+      <h1 class="thread">&larr; <a href="double-buffer.html">Double Buffer</a> | <a href="update-method.html">Update Method</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
