--- a/html/introduction.html
+++ b/html/introduction.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread"><a href="spatial-partition.html">Architecture, Performance, and Games</a> &rarr;
+      <h1 class="thread"><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
