--- a/html/optimization-patterns.html
+++ b/html/optimization-patterns.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="service-locator.html">Service Locator</a> | <a href="service-locator.html">Data Locality</a> &rarr;
+      <h1 class="thread">&larr; <a href="service-locator.html">Service Locator</a> | <a href="data-locality.html">Data Locality</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
@@ -131,17 +131,9 @@
 </div>
 <h1>Optimization Patterns</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
-<p>While the rising tide of faster and faster hardware has lifted most software above needing to worry about performance, games are one of the few remaining exceptions. Players always want richer, more realistic and exciting experiences. Screens are crowded with games vying for a player&#x2019;s attention&thinsp;&mdash;&thinsp;and cash!&thinsp;&mdash;&thinsp;and the game that squeezes the most out of the hardware often wins.</p>
+<p>While the rising tide of faster and faster hardware has lifted most software above worrying about performance, games are one of the few remaining exceptions. Players always want richer, more realistic and exciting experiences. Screens are crowded with games vying for a player&#x2019;s attention&thinsp;&mdash;&thinsp;and cash!&thinsp;&mdash;&thinsp;and the game that squeezes the most out of the hardware often wins.</p>
 <p>Optimizing for performance is a deep art that touches all aspects of software. Low-level coders master the myriad idiosyncracies of hardware architectures. Meanwhile, algorithms researchers compete to prove mathematically whose procedure is the most efficient.</p>
 <p>Here, I touch on a few mid-level patterns that are often used to speed up a game. <a href="data-locality.html">Data Locality</a> introduces you to the modern computer&#x2019;s memory hierarchy and how you can use it to your advantage. The <a href="dirty-flag.html">Dirty Flag</a> pattern helps you avoid unnecessary computation while <a href="object-pool.html">Object Pools</a> help you avoid unnecessary allocation. <a href="spatial-partition.html">Spatial Partitioning</a> speeds up the virtual world and its inhabitants&#x2019; arrangement in space.</p>
-<!--
-Videogames are exciting in large part because they take us somewhere else. For a few minutes (or, let&#x2019;s be honest with ourselves, much longer), we become inhabitants of a virtual world. Creating these worlds is one of the supreme delights of being a game programmer.
-
-One aspect that most of these game worlds feature is *time*: the artificial world lives and breathes on its own cadence. As world builders, we must invent time and craft the gears that drive our game&#x2019;s great clock.
-
-The patterns in this section are tools for doing just that. A [Game Loop](game-loop.html) is the central axle that the clock spins on. Objects hear its ticking through [Update Methods](update-method.html). We can hide the computer&#x2019;s sequential nature behind a facade of snapshots of moments in time using [Double Buffering](double-buffer.html), so that the world appears to update simultaneously.
--->
-
 <h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
 <ul>
 <li><a href="data-locality.html">Data Locality</a></li>
