--- a/html/type-object.html
+++ b/html/type-object.html
@@ -24,7 +24,7 @@
 <div class="nav">
   <div class="bar">
     <div class="column">
-      <h1 class="thread">&larr; <a href="subclass-sandbox.html">Subclass Sandbox</a> | <a href="subclass-sandbox.html">Decoupling Patterns</a> &rarr;
+      <h1 class="thread">&larr; <a href="subclass-sandbox.html">Subclass Sandbox</a> | <a href="decoupling-patterns.html">Decoupling Patterns</a> &rarr;
       <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
     </div>
   </div>
